addressed comments around nightly.yml